--- a/portfolio-page/home/home.html
+++ b/portfolio-page/home/home.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfolio.html</title>
+    <link rel="stylesheet" href="./home.css">
 </head>
 <body>
-    
+    <div class="home-page">
+        <div class="navbar">
+            <div class="left">
+                Portfolio
+            </div>
+            <div class="middle"></div>
+            <div class="right">
+                <a href="#">Home</a>
+                <a href="#">About</a>
+                <a href="#">Contact</a>
+            </div>
+        </div>
 </body>
 </html>
