--- a/portfolio-page/home/home.html
+++ b/portfolio-page/home/home.html
@@ -16,7 +16,8 @@
             <div class="right">
                 <a href="#">Home</a>
                 <a href="#">About</a>
-                <a href="#">Contact</a>
+                <a href="#">skills</a>
+                <a href="#">Contact me</a>
             </div>
         </div>
 </body>
