--- a/portfolio-page/home/home.html
+++ b/portfolio-page/home/home.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="./home.css">
 </head>
 <body>
+    <div class="background">
+        
     <div class="home-page">
         <div class="navbar">
             <div class="left">
@@ -20,5 +22,12 @@
                 <a href="#">Contact me</a>
             </div>
         </div>
+
+        <div class="body">
+
+            <div class="left"></div>
+            <div class="right"></div>
+        </div>
+    </div>
 </body>
 </html>
