--- a/portfolio-page/home/home.html
+++ b/portfolio-page/home/home.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./home.css">
 </head>
 <body>
-    <div class="background">
+   
         
     <div class="home-page">
         <div class="navbar">
@@ -25,8 +25,19 @@
 
         <div class="body">
 
-            <div class="left"></div>
-            <div class="right"></div>
+            <div class="left-body">
+                <img src="../img/Skill-sets-of-a-Laravel-developer.png">
+            </div>
+            <div class="right-body">
+                <p>
+                    <h3>I am a Aman kumar</h3>
+                    <h1>Web Developer</h1>
+                    <hr>
+                    My main area of erpertise include javascript,<br>
+                    typescript.node.js,html,css,php and python.<br>
+                   <button onclick="">See my work</button>  
+                </p>
+            </div>
         </div>
     </div>
 </body>
