--- a/portfolio-page/home/home.html
+++ b/portfolio-page/home/home.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>portfolio.html</title>
     <link rel="stylesheet" href="./home.css">
+
+
+
 </head>
 <body>
    
@@ -17,7 +20,7 @@
             <div class="middle"></div>
             <div class="right">
                 <a href="#">Home</a>
-                <a href="#">About</a>
+                <a href="../about/about.html">About</a>
                 <a href="#">skills</a>
                 <a href="#">Contact me</a>
             </div>
@@ -40,5 +43,7 @@
             </div>
         </div>
     </div>
+  
+    
 </body>
 </html>
