--- a/portfolio-page/about/about.html
+++ b/portfolio-page/about/about.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About page</title>
+    <link rel="stylesheet" href="./about.css">
 </head>
 <body>
-    
+    <div class="home-page">
+        <div class="navbar">
+            <div class="left">
+                Portfolio
+            </div>
+            <div class="middle"></div>
+            <div class="right">
+                <a href="../home/home.html">Home</a>
+                <a href="#">About</a>
+                <a href="#">skills</a>
+                <a href="#">Contact me</a>
+            </div>
+        </div>
 </body>
 </html>
