--- a/portfolio-page/about/about.html
+++ b/portfolio-page/about/about.html
@@ -20,5 +20,21 @@
                 <a href="#">Contact me</a>
             </div>
         </div>
+        <div class="container">
+            <div class="left-body">
+                <img src="img/IMG_20211013_172455_409.jpg" width="310px" alt="images">
+            </div>
+            <div class="right-body">
+                <h1>ABOUT ME</h1>
+                <ul>
+                    <li> I am<b> Aman kumar sharma</b>, B.tech student at Malout institute of Management and information Technology.</li><br>
+                    <li>Inquisitive, hard-working and consistent.I solve problems in creative ways. where i am completing my third year in the college of engineering,
+                    I have learned the importance of appling classical strategies to modern-day projects.</li><br>
+                    <li>To add further I am a quick learner and believe in learning from my past mistakes as learning
+                        from one's experiences is a virtue that can take anyone ahead in their life and career.</li>
+                </ul>
+            </div>
+        
+        </div>
 </body>
 </html>
