--- a/portfolio-page/about/about.html
+++ b/portfolio-page/about/about.html
@@ -22,7 +22,7 @@
         </div>
         <div class="container">
             <div class="left-body">
-                <img src="img/IMG_20211013_172455_409.jpg" width="310px" alt="images">
+                <img src="../img/IMG_20211013_172455_409.jpg" width="310px" alt="images">
             </div>
             <div class="right-body">
                 <h1>ABOUT ME</h1>
