--- a/portfolio-page/home/home.html
+++ b/portfolio-page/home/home.html
@@ -14,7 +14,7 @@
         
     <div class="home-page">
         <div class="navbar">
-            <div class="left">
+            <div class="left" style="color: blue;">
                 Portfolio
             </div>
             <div class="middle"></div>
