--- a/portfolio-page/about/about.html
+++ b/portfolio-page/about/about.html
@@ -9,7 +9,7 @@
 <body>
     <div class="home-page">
         <div class="navbar">
-            <div class="left">
+            <div class="left" style="color: blue">
                 Portfolio
             </div>
             <div class="middle"></div>
