--- a/portfolio-page/about/about.html
+++ b/portfolio-page/about/about.html
@@ -16,7 +16,7 @@
             <div class="right">
                 <a href="../home/home.html">Home</a>
                 <a href="#">About</a>
-                <a href="#">skills</a>
+                <a href="../skills/skills.html">skills</a>
                 <a href="#">Contact me</a>
             </div>
         </div>
