--- a/portfolio-page/home/home.html
+++ b/portfolio-page/home/home.html
@@ -21,7 +21,7 @@
             <div class="right">
                 <a href="#">Home</a>
                 <a href="../about/about.html">About</a>
-                <a href="#">skills</a>
+                <a href="../skills/skills.html">skills</a>
                 <a href="#">Contact me</a>
             </div>
         </div>
