--- a/portfolio-page/skills/skills.html
+++ b/portfolio-page/skills/skills.html
@@ -20,5 +20,25 @@
                 <a href="#">Contact me</a>
             </div>
         </div>
+
+        <h1>Skills</h1>
+        <table>
+            <th><h3>Web development</h3>
+                <li>Web development is the work involved in developing a website for the Internet or an intranet. Web
+                    development can range from developing a simple single static page of plain text to complex web
+                    applications, electronic businesses, and social network services.</li>
+            </th>
+            <th><h3>Marketing</h3>
+                <li>Marketing is the process of exploring, creating, and delivering value to meet the needs of a target
+                    market in terms of goods and services potentially including selection of a target audience;
+                    selection of certain attributes or themes to emphasize in advertising; operation of advertising
+                    campaigns; attendance at trade shows and public events.</li>
+            </th>
+            <th><h3>SEO</h3>
+                <li>Search engine optimization is the process of improving the quality and quantity of website traffic to a
+                    website or a web page from search engines. SEO targets unpaid traffic rather than direct traffic or paid
+                    traffic.</li>
+            </th>
+        </table>
 </body>
 </html>
