--- a/portfolio-page/skills/skills.html
+++ b/portfolio-page/skills/skills.html
@@ -10,13 +10,13 @@
     <div class="home-page">
         <div class="navbar">
             <div class="left" style="color: blue;">
-                Portfolio
+                Portfolio 
             </div>
             <div class="middle"></div>
             <div class="right">
                 <a href="../home/home.html">Home</a>
                 <a href="../about/about.html">About</a>
-                <a href="#">skills</a>
+                <a href="#">Skills</a>
                 <a href="#">Contact me</a>
             </div>
         </div>
