--- a/portfolio-page/home/home.html
+++ b/portfolio-page/home/home.html
@@ -21,8 +21,8 @@
             <div class="right">
                 <a href="#">Home</a>
                 <a href="../about/about.html">About</a>
-                <a href="../skills/skills.html">skills</a>
-                <a href="#">Contact me</a>
+                <a href="../skills/skills.html">Skills</a>
+                <a href="../contact me/contact.html">Contact me</a>
             </div>
         </div>
 
