--- a/portfolio-page/about/about.html
+++ b/portfolio-page/about/about.html
@@ -16,8 +16,8 @@
             <div class="right">
                 <a href="../home/home.html">Home</a>
                 <a href="#">About</a>
-                <a href="../skills/skills.html">skills</a>
-                <a href="#">Contact me</a>
+                <a href="../skills/skills.html">Skills</a>
+                <a href="../contact me/contact.html">Contact me</a>
             </div>
         </div>
         <div class="container">
