--- a/portfolio-page/skills/skills.html
+++ b/portfolio-page/skills/skills.html
@@ -17,7 +17,7 @@
                 <a href="../home/home.html">Home</a>
                 <a href="../about/about.html">About</a>
                 <a href="#">Skills</a>
-                <a href="#">Contact me</a>
+                <a href="../contact me/contact.html">Contact me</a>
             </div>
         </div>
 
