--- a/calculator/home.html
+++ b/calculator/home.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./home.css">
 </head>
 <body>
-<div class="container">
+<div class="container"><h2>Calculate with Me</h2>
     <div class="calculator">
         <form>
             <div class="display">
